--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,36 @@ p {
   flex-direction: column;
 }
 
+.cart-container {
+  border: 1px solid black;
+  width: 540px;
+  height: 242px;
+  padding: 20px 20px 20px 90px;
+}
+
+.cart-item p, .cart-item span{
+  color: black;
+}
+
+.cart-item-button {
+  /* all: unset; */
+  position: absolute;
+  left: 20px;
+  /* border: none; */
+
+}
+
+.cart-item-icon {
+  position: absolute;
+  /* left: 20px; */
+}
+
+
+/* .header {
+  position: fixed;
+} */
+
+/*
 .header {
   background-color: yellow;
 }
@@ -110,4 +140,4 @@ p {
 
 .footer {
   background-color: blue;
-}
+} */
