--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,8 @@ p {
 .waffle-bkg {
   background: url("../img/wafle-bkg.png");
   color: black;
+  margin: 0 27px;
+  border-radius: 7px;
 }
 .strawberry-bkg {
   background: url("../img/strawberry-bkg.png") no-repeat;
@@ -128,6 +130,8 @@ p {
 }
 .title-and-action-btn {
   text-align: center;
+  margin-top: 250px;
+  margin-bottom: 50px;
 }
 .promo-banners{
   display: flex;
@@ -135,8 +139,25 @@ p {
 }
 .list-of-hits ul{
   display: flex;
-  flex-direction: row;
   list-style: none;
+}
+.hit {
+  width: 260px;
+}
+.hit img{
+  width: 200px;
+  height: 200px;
+}
+.news-and-subscribtion{
+  display: flex;
+}
+.news {
+  width: 560px;
+  margin: 40px 13px 20px 27px;
+}
+.subscribe{
+  width: 560px;
+  margin: 40px 27px 20px 13px;
 }
 .advantages{
   display: flex;
@@ -145,4 +166,18 @@ p {
 }
 .advantage {
   width: 476px;
+}
+.items-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-item {
+  width: 330px;
+  height: 270px;
+  margin-top: 10px;
+  padding-top: 20px;
+}
+.list-item img {
+  max-width: 200px;
 }
